

*lh-sources-3.14.2 (05 May 2014)

  05 May 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.14.2.ebuild:
  Bump to latest linux and genpatches release

  24 Apr 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.13.11.ebuild:
  Fix patch name

  24 Apr 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.13.11.ebuild:
  Fix patch name

*lh-sources-3.14.1 (24 Apr 2014)
*lh-sources-3.13.11 (24 Apr 2014)
*lh-sources-3.13.10 (24 Apr 2014)

  24 Apr 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.13.10.ebuild,
  +lh-sources-3.13.11.ebuild, +lh-sources-3.14.1.ebuild:
  Bump to latest aufs3, genpatches and linux release

*lh-sources-3.14.0 (07 Apr 2014)

  07 Apr 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.14.0.ebuild,
  +files/lh-sources-3.14-armv6.patch:
  Bump to latest aufs3, linux and genpatch release

*lh-sources-3.12.16 (05 Apr 2014)

  05 Apr 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.12.16.ebuild:
  Bump to latest linux and genpatch release

*lh-sources-3.13.9 (05 Apr 2014)

  05 Apr 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.13.9.ebuild:
  Bump to latest linux and genpatch release

*lh-sources-3.13.8 (01 Apr 2014)

  01 Apr 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.13.8.ebuild:
  Bump to latest linux and genpatch release

  28 Mar 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.12.14.ebuild,
  +lh-sources-3.12.15.ebuild:
  Bump to latest linux and genpatch release

*lh-sources-3.13.7 (25 Mar 2014)

  25 Mar 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.13.7.ebuild:
  Bump to latest aufs3, genpatches and linux release

  22 Mar 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.13.6.ebuild,
  +files/c2412d91c68426e22add16550f97ae5cd988a159.patch:
  Add backport patch for audit dmesg lines

  22 Mar 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.13.6.ebuild,
  +files/c2412d91c68426e22add16550f97ae5cd988a159.patch:
  Add backport patch for audit dmesg lines

*lh-sources-3.12.14 (20 Mar 2014)
