@@ -25,6 +25,7 @@ DIST README-3.13.9.BFQ 18624 SHA256 1dc3631972dc7222575f2c64db809d23d215466bc4ad
 DIST README-3.14.0.BFQ 18624 SHA256 274876497a66625ef6b8969a2a06dbf1d192f06878cb1beaddbd65d0cde7946f SHA512 d001b68b3ed9788da9e64d1efa4d202af0b967ba57c64c0c45ce23e4854f8e6152f549def84bbe383b2e61832f7ce5d58b5d37fc3b39a788ad4a7e4d40897801 WHIRLPOOL ac087b8c3a1e1adf07bc780acfdea60ee4facd70dfa850404752d9c135ebfda5cc03a4ab74d59bd242bdd43298647eafa7826a6fa62f455f9a621e2b434bd2b8
 DIST README-3.14.1.BFQ 19499 SHA256 085061e9e612d7d5ab0f3068d38e5732ddcddd6e6439b43b74179f0d95df85c0 SHA512 5e7f4f4fe22b95bc5ba717b30b6d6c0c7efdc320cae8ce3cf8e503af68c24892071f1f33b6c0e14d6d56b3e43f3bef1681e3631e5227d30a8c1969814ef4a29a WHIRLPOOL 64819ac8bfe90b5bb71b16235b84d83fb4e0d4fa75bd8b0aaa0a305a595b54de362c1ef03b1c47b25709cc8563faf153f264d8a2485649eceef0a75a19623ba6
 DIST README-3.14.2.BFQ 19499 SHA256 085061e9e612d7d5ab0f3068d38e5732ddcddd6e6439b43b74179f0d95df85c0 SHA512 5e7f4f4fe22b95bc5ba717b30b6d6c0c7efdc320cae8ce3cf8e503af68c24892071f1f33b6c0e14d6d56b3e43f3bef1681e3631e5227d30a8c1969814ef4a29a WHIRLPOOL 64819ac8bfe90b5bb71b16235b84d83fb4e0d4fa75bd8b0aaa0a305a595b54de362c1ef03b1c47b25709cc8563faf153f264d8a2485649eceef0a75a19623ba6
+DIST README-3.14.3.BFQ 19499 SHA256 085061e9e612d7d5ab0f3068d38e5732ddcddd6e6439b43b74179f0d95df85c0 SHA512 5e7f4f4fe22b95bc5ba717b30b6d6c0c7efdc320cae8ce3cf8e503af68c24892071f1f33b6c0e14d6d56b3e43f3bef1681e3631e5227d30a8c1969814ef4a29a WHIRLPOOL 64819ac8bfe90b5bb71b16235b84d83fb4e0d4fa75bd8b0aaa0a305a595b54de362c1ef03b1c47b25709cc8563faf153f264d8a2485649eceef0a75a19623ba6
 DIST aufs-sources-3.12.x_p20140310.tar.xz 152176 SHA256 fb2c3547cf908e968d1c439be47706bdf05d3203f3e6d4fadec84878dca4efe9 SHA512 96415f28559b1e6fbcf8bf777294b727c0613b685b0674503350af044e9c51ab0246f28da8eb2768549ff1109a911509b5bc03b486365c42058248346ee1437d WHIRLPOOL 3b4d9d14f78a63a3a7b6c2c4bca730667771f1dee40a37bb7b433c93cdd5e9514765d317ff200a973f29bb83290447b1e9bb8fd497e070ac11b7d81730a9fcdc
 DIST aufs-sources-3.13_p20140303.tar.xz 152112 SHA256 f5985f50cde210a99dae027cd4f4e73daa5755b2e916fa8b1e987f7229971a23 SHA512 d1b1c144eeb2b9ae57a16b57409f69591ab1e9cb1db33dba9548998c578cde3a18d711ee272c049ec88b8a6611c5a7e0050dca027dc6be9365540fa6f7a0be22 WHIRLPOOL 93cefd96908f4def5936eab0018ba7816994a9f0a3267a0c17be46ef53299904f7d4288c86a132e4d16e06f3911fd12d034d0bd9dda72c72af0e26f37a14bd18
 DIST aufs-sources-3.13_p20140310.tar.xz 152112 SHA256 f5985f50cde210a99dae027cd4f4e73daa5755b2e916fa8b1e987f7229971a23 SHA512 d1b1c144eeb2b9ae57a16b57409f69591ab1e9cb1db33dba9548998c578cde3a18d711ee272c049ec88b8a6611c5a7e0050dca027dc6be9365540fa6f7a0be22 WHIRLPOOL 93cefd96908f4def5936eab0018ba7816994a9f0a3267a0c17be46ef53299904f7d4288c86a132e4d16e06f3911fd12d034d0bd9dda72c72af0e26f37a14bd18
@@ -61,6 +62,8 @@ DIST genpatches-3.14-4.base.tar.xz 19028 SHA256 2d6abfa6a7af3f4ad1f46a0b6f121226
 DIST genpatches-3.14-4.extras.tar.xz 18244 SHA256 7cb1d8f36ef56e4036708185855be8a34ef5b953dc74eb5d2d7a35fe41c1d009 SHA512 ef0799d129ad31602763b145e8274cc98e76902fabfbcd94a5ddc95d7d1b0af9dbe874730fb30d8221f3b770df649c2a42f5703c262ad9fb5b57e4a29f44c1eb WHIRLPOOL 1b1743ea48c58f66a27b685657c8d38b60415c96531c21227a666446f0bfe896ffa774b0cf7ecaf2a92cebfadc0ee2fe8fab64a4e1bd3909cc728f2e4b76c061
 DIST genpatches-3.14-5.base.tar.xz 29832 SHA256 458a678f14d8c9c3beaefe75cc77ce8258346d6096350efffe9de6216017a292 SHA512 525eecbd8bb092bccb071ffbfcb93be4247b973276538a2dcb596ae1a974ad360c5b565e8ea5ef0a05130c4218040ffe73b39491286e4c51b9636b775b974da6 WHIRLPOOL e8a192e467d1b9e26c21531ca621268fb530647069120ef5c79636d0e3783739830a27b97bb9eaa84b1276dd33f44abab66fd11a8ab600a349963ccf90894138
 DIST genpatches-3.14-5.extras.tar.xz 18240 SHA256 5faa557d9ac6b258eb1e1e8a680f1b314bb2c34401f34637e9b7c97652ff6065 SHA512 50d378f7f004127e6defed0d04b0305c44bdc6b04ff92aa6fc4c769f880bc79b916b3c899e4853628252d45ab23d9aa06fbf3b3a131b9c89a9a657fc6227d0c2 WHIRLPOOL feec9f7d8e0271bf1274be11f9d37c1010dc40716863739e8db32f0f1480623108b2d9273e52f835e557dbe535b979fcedc3bc3cb5622651f2dd15aae04a2391
+DIST genpatches-3.14-6.base.tar.xz 79984 SHA256 3834ea897d99aed52281fdff1ae4c402a97808b0e7e58a3e8a385dfc69646269 SHA512 c8ae44e1af87fabdfb8be824960759d7def0904471f0f8514eedaa943da3b735decba86f83db60585771dee7aacf5100c14cf562c3b946404737e97079155f5b WHIRLPOOL 8ee2868cbd0ebbd44a5209d93955cd5c79186ccf2e3bab1d4b3ad12036132f9f74ced6b293dec4abb5607428ac459938984fe4cfb4336ddbdc37cfd13ac64dbf
+DIST genpatches-3.14-6.extras.tar.xz 18244 SHA256 7cb1d8f36ef56e4036708185855be8a34ef5b953dc74eb5d2d7a35fe41c1d009 SHA512 ef0799d129ad31602763b145e8274cc98e76902fabfbcd94a5ddc95d7d1b0af9dbe874730fb30d8221f3b770df649c2a42f5703c262ad9fb5b57e4a29f44c1eb WHIRLPOOL 1b1743ea48c58f66a27b685657c8d38b60415c96531c21227a666446f0bfe896ffa774b0cf7ecaf2a92cebfadc0ee2fe8fab64a4e1bd3909cc728f2e4b76c061
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-391b268db43db7e45acdec900adebb2d1545db9f.patch 13917 SHA256 6663d52214c11ad1b76cdbc0e4ba2864747682c56319b5de31f7bb24251a0ebf SHA512 17ff40ac339ce8f0a6cc503859d3480011555688239277e14a80f767515bd8644ac2452fa8e3ca093e4c977f79428197cdf30239816f6bb6bfc27407b3f6c033 WHIRLPOOL cda377a9b8d8fa549d24856b78b9109de4aba6bf8e84b08a2486788ae59f44f715cd3f191b69d8ce4ff536414ca0bf635a4c524d515519710be09388a0327488
 DIST linux-3.12.tar.xz 76384600 SHA256 2e120ec7fde19fa51dc6b6cc11c81860a0775defcad5a5bf910ed9a50e845a02 SHA512 4ba5797e0772726d05c9f2eee66dc6dc2a5033c749ef44764c805a83da739ed5d0c6443b76785e38fe1ef74cc7ade787e48144faed0cfcb6f124f05248c700ff WHIRLPOOL a40195f6b53ba3440cf90a44495f6a59670f750851d1518e2bdfe3b949f0e898d1df5d37e271c31c555087026ddb6cc2c9109b22b9639e3222735e6f650a1417
